WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171539
REGRESSION (
r213036
): Crash in -[WKContentView _webTouchEventsRecognized:] when a touch event arrives after a WebPageProxy has been invalidated
https://bugs.webkit.org/show_bug.cgi?id=171539
Summary
REGRESSION (r213036): Crash in -[WKContentView _webTouchEventsRecognized:] wh...
Andy Estes
Reported
2017-05-02 00:05:27 PDT
REGRESSION (
r213036
): Crash in -[WKContentView _webTouchEventsRecognized:] when a touch event arrives after a WebPageProxy has been invalidated
Attachments
Patch
(2.07 KB, patch)
2017-05-02 00:17 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2017-05-02 00:06:41 PDT
rdar://problem/31614982
Andy Estes
Comment 2
2017-05-02 00:17:26 PDT
Created
attachment 308805
[details]
Patch
WebKit Commit Bot
Comment 3
2017-05-02 11:43:37 PDT
Comment on
attachment 308805
[details]
Patch Clearing flags on attachment: 308805 Committed
r216080
: <
http://trac.webkit.org/changeset/216080
>
WebKit Commit Bot
Comment 4
2017-05-02 11:43:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug